--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- production version, optimized for size and speed -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!--<script charset="utf-8" src="/ajaxDemo.js"></script>-->
     <script charset="utf-8" src="static/js/index.js"></script>
 </head>
@@ -17,11 +17,16 @@
         <h4>这是一个测试页面</h4>
     </div>
     <div id="app">
-        <p>{{date}}</p>
-        <p>{{title}}</p>
-        <p>{{url}}</p>
+        <div>
+            <p>{{date}}</p>
+            <p>{{title}}</p>
+            <p>{{url}}</p>
+        </div>
+        <div>
+            <p>{{info}}</p>
+        </div>
     </div>
-
+    <div>
 </body>
 
 </html>
